# open-evmbench

./: .gitignore  LICENSE  README.md  SECURITY.md  antfleet.public_key.pem  pyproject.toml
.github/workflows/: acceptance-signing.yml  ci.yml  patch-composer.yml  patch-gpt55.yml  patch-reference.yml  promote.yml  render-board.yml  (+1 more)
docker/: evmbench-patch-base.Dockerfile
docs/: KEYS.md  PHASE2_LAUNCH_CHECKLIST.md  PRIZE.md  RULES.md  SPEC.md  SUBMITTING.md  SUBMITTING_PATCH.md  UPSTREAM_PIN.md  external_detect_smoke_report.json
harness/: judge_prompt_v1.md  patch_tasks_v1.json
leaderboard/: board_config.json  historical_agent_metadata.json
openevmbench/: __init__.py  accept.py  board.py  checks.py  cli.py  config.py  constants.py  dataset.py  hashing.py  jcs.py  judge.py  package.py  patch_docker.py  patch_docker_runner.py  patch_worker.py  render.py  runner.py  signing.py  upstream.py  validation.py
scripts/: build_gold_patch_diffs.py  docker_spike_patch_worker.py  external_detect_smoke.py  fetch_audit_sources.py  patch_preflight.py  patch_reference_package.py  run_composer_patch.py  run_gpt55_patch.py  run_with_codex_judge.py  smoke_test.py  spike_patch_worker.py
submissions/: .smoke-trigger.md
tests/: conftest.py  test_accept.py  test_acceptance_key.py  test_agent_params.py  test_board.py  test_board_agent_columns.py  test_checks.py  test_cli.py  test_dataset.py  test_jcs.py  test_judge.py  test_patch_dataset.py  test_patch_docker.py  test_run_gpt55_patch.py  test_runner_e2e.py  test_signing.py  test_validation.py  test_workflow_hardening.py
(+818 files in other folders)
